# tenants2fast-fastapi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
docs/: tenant-seeder-usage.md
examples/: basic_usage.py
examples/tenant-seeder-usage/: seed_all_tenants.py  seed_new_tenant.py  seeder_config.py
src/tenant2fast_fastapi/: __init__.py  settings.py
src/tenant2fast_fastapi/data/seeders/: tenant_seed_data.json
src/tenant2fast_fastapi/databases/: __init__.py  tenant_db_factory.py
src/tenant2fast_fastapi/dependencies/: __init__.py  tenant_context.py  tenant_rbac.py
src/tenant2fast_fastapi/middleware/: __init__.py  tenant_middleware.py
src/tenant2fast_fastapi/models/: __init__.py  assignments_model.py  bases.py  permission_category_model.py  permission_model.py  role_model.py  route_model.py  tenant_model.py  tenant_user_model.py  user_model.py  user_tenant_model.py
src/tenant2fast_fastapi/routers/: __init__.py  tenant_permissions_router.py  tenant_roles_router.py  tenant_users_router.py  tenants_router.py
src/tenant2fast_fastapi/schemas/: __init__.py  response_schemas.py  tenant_schema.py
src/tenant2fast_fastapi/schemas/rbac/: __init__.py  permission_schema.py  role_schema.py  user_schema.py
src/tenant2fast_fastapi/seeders/: manifest.json
src/tenant2fast_fastapi/seeders/dev/: permissions.json  roles.json
src/tenant2fast_fastapi/seeders/prod/: categories.json  permissions.json  roles.json
src/tenant2fast_fastapi/services/: __init__.py  tenant_access_service.py  tenant_permission_service.py  tenant_rbac_seeder.py  tenant_role_service.py  tenant_service.py  tenant_user_service.py
src/tenant2fast_fastapi/utils/: __init__.py  models_loader.py  tenant_cache.py  tenant_migrations.py
tests/: app_fixture.py  conftest.py  test_get_current_tenant_user.py  test_has_tenant_permission.py  test_has_tenant_role.py  test_middleware.py  test_models.py  test_package.py  test_schema_propagation.py  test_seeder.py  test_tenant_base_model.py  test_tenant_provisioning.py
